[package]

name = "dynamic"
version = "0.2.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-dynamic.git"
description = "A dyanmically typed value with fast downcasting."
readme = "README.md"
license = "MIT"

[dependencies]
unsafe-any = "0.4"

[features]
nightly = []

